--- a/src/components/button.css
+++ b/src/components/button.css
@@ -1,7 +1,7 @@
 .button-30 {
   align-items: center;
   appearance: none;
-  background-color: #adadf6;
+  background-color: #ffc2e5;
   border-radius: 6px;
   border-width: 0;
   box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
@@ -11,7 +11,7 @@
   display: inline-flex;
   font-family: "JetBrains Mono",monospace;
   height: 30px;
-  width: 120px;
+  width: 200px;
   justify-content: center;
   line-height: 1;
   list-style: none;
@@ -36,7 +36,7 @@
 
 .button-30:hover {
   box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-  transform: translateY(-4px);
+  transform: translateY(-2px);
 }
 
 .button-30:active {
