--- a/src/components/button.css
+++ b/src/components/button.css
@@ -4,6 +4,7 @@
   background-color: #ffc2e5;
   border-radius: 6px;
   border-width: 0;
+  margin: 20px;
   box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
   box-sizing: border-box;
   color: #36395A;
