--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
+    margin-top : 50px;
     animation: App-logo-spin infinite 20s linear;
   }
 }
