--- a/src/components/button.css
+++ b/src/components/button.css
@@ -11,8 +11,8 @@
   cursor: pointer;
   display: inline-flex;
   font-family: "JetBrains Mono",monospace;
-  height: 30px;
-  width: 200px;
+  height: 35px;
+  width: 35px;
   justify-content: center;
   line-height: 1;
   list-style: none;
@@ -43,4 +43,12 @@
 .button-30:active {
   box-shadow: #D6D6E7 0 3px 7px inset;
   transform: translateY(2px);
+}
+
+.button-30.light {
+  background-color: #6b6b6b;
+}
+
+.button-30.dark {
+  background-color: #d0d0ff;
 }
